# clog

./: .pre-commit-config.yaml  Cargo.toml  README.md  example.txt
scripts/: pre-commit.py
src/: main.rs  parser.rs
