[package]
authors = ["Sigurd Holsen <sigurd.holsen@cognite.com>"]
edition = "2018"
name = "clog"
version = "0.5.6"

[dependencies]
chrono = "0.4.19"
clap = { version = "4.0.13", features = ["derive"] }
color-eyre = "0.6.2"
colored = "2.0.0"
eyre = "0.6.5"
nom = "7.1.1"

[dev-dependencies]
proptest = "1.0.0"
proptest-recurse = "0.5.0"
serde_json = "1.0.66"
