[package]
authors = ["Sigurd Holsen <sigurd.holsen@cognite.com>"]
edition = "2018"
name = "clog"
version = "0.5.8"

[dependencies]
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6"
owo-colors = { version = "3", features = ["supports-colors"] }
eyre = "0.6"
nom = "7.1"

[dev-dependencies]
proptest = "1.0.0"
proptest-recurse = "0.5.0"
serde_json = "1.0.66"
